--- a/lab.html
+++ b/lab.html
@@ -70,21 +70,26 @@
             const scene = new THREE.Scene();
 
             const material = new THREE.LineBasicMaterial({ color: 0x0000ff });
+            const material2 = new THREE.MeshBasicMaterial({ color: 0x03038e });
 
-            const points = [];
-            points.push(new THREE.Vector3(-10, 0, 0));
-            points.push(new THREE.Vector3(0, 10, 0));
-            points.push(new THREE.Vector3(10, 0, 0));
-            points.push(new THREE.Vector3(20, 0, 0));
-            const geometry = new THREE.BufferGeometry().setFromPoints(points);
+            const trianglePoints = [];
+            trianglePoints.push(new THREE.Vector3(-10, 0, 0));
+            trianglePoints.push(new THREE.Vector3(0, 10, 0));
+            trianglePoints.push(new THREE.Vector3(10, 0, 0));
+            trianglePoints.push(new THREE.Vector3(-10, 0, 0));
+            const geometry = new THREE.BufferGeometry().setFromPoints(
+                trianglePoints
+            );
+            const extrudePoints = [];
 
             const line = new THREE.Line(geometry, material);
-
+            const mesh = new THREE.Mesh(geometry, material2);
+            scene.add(mesh);
             scene.add(line);
             function animate() {
                 requestAnimationFrame(animate);
                 renderer.render(scene, camera);
-                line.rotation.x += 0.01;
+                mesh.rotation.y += 0.01;
                 line.rotation.y += 0.01;
             }
             animate();
